--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -5,6 +5,7 @@
       GitHub Codespaces <span class="heart">♥️</span> Rails
     </p>
     <p class="small">
+      hello this is kira (no it's actually william)
       Edit <code>app/views/hello/index.html.erb</code> and see changes live!
     </p>
   </header>
